[package]
name = "minesweeper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cross-platform Instant/SystemTime. On native it re-exports std::time; on wasm
# it is backed by the browser clock (std's time panics on wasm32-unknown-unknown).
web-time = "1.1"

# Native (desktop) uses eframe's default wgpu renderer.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = "0.34.3"

# Web uses the glow (WebGL2) renderer for broad browser support, no wgpu/winit.
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }
wasm-bindgen-futures = "0.4"
